fix: fixed profile picture spacing

--- a/client/src/styles/loading.scss
+++ b/client/src/styles/loading.scss
@@ -190,7 +190,8 @@
 }
 
 .profileIcon-wrapper {
-    width: 128px;
-    height: 128px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
+    display: inline-block;
 }
